test/TestPhases/typechecker/invalid/NoMagicCasting5.blc
module

function noMagicCasting()
    var a: int8 = -128

    var c: float32 = a
end
